Remove extra exception consumer